Fixed Certain Images Not Loading On Mobile

--- a/Projects/Live Sites/Greek Pitas/style.css
+++ b/Projects/Live Sites/Greek Pitas/style.css
@@ -28,7 +28,7 @@ a {
     left: -5%;
     width: 110%;
     height: 840px;
-    background-image: url(images/Hero.jpg);
+    background-image: url(Images/Hero.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
