--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
     --primary-color: #3591c2;
-    --secondary-color: #2573a0;
+    --secondary-color: #166897;
     --tertiary-color: #EBEBEB;
     --quaternary-color: #ffd035;
     --quinary-color: #ff9f35;
